ontol/ontol-compiler/test-cases/error/map/no_attributes_after_spread.on
def foo (rel* 'a': i64)
def bar (rel* 'a': i64)
map(
    foo(..rest,
        'a': x // ERROR spread label must be the last argument
    ),
    bar('a': x, ..rest)
)
